--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -133,7 +133,7 @@
                 <div
                     class="cursor-pointer border bg-green h-10 mx-auto w-full place-content-center px-3 rounded-md flex"
                     (click)="AreaConvertor()">
-                    <img class="cursor-pointer  w-6" src="../../../../../assets/media/icons/svg/Shopping/Calculator.svg"
+                    <img class="cursor-pointer calculator-img  w-6" src="../../../../../assets/media/icons/svg/Shopping/Calculator.svg"
                          alt="Calculator"/>
                     <p class="ml-2 mb-0 self-center">Area Convertor</p>
 
