--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -538,7 +538,7 @@
             mat-table
         "
     >
-        <h4>No Record found.</h4>
+        <p class="text-green text-center p-5 font-bold">No Record found.</p>
     </div>
 </div>
 </div>
