--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -317,6 +317,31 @@
                 </div></mat-card>
         </div>
 
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click)="reschedulementOfLoan()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+                <div class="d-grid" style="justify-items: center;">
+                    <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
+
+
+                    <p class=" text-black"
+                    >Request For Reschedulement Of Loan Installment Report</p>
+                </div></mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card routerLink="get-customer-legal-heirs" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+
+                <div class="d-grid" style="justify-items: center;">
+                    <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
+
+
+                    <p class=" text-black"
+                    >Get Customer Legal Heirs</p>
+                </div>
+
+            </mat-card>
+        </div>
+
     </div>
 
 </div>
