--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -47,7 +47,7 @@
 
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
+                      id="llcInquiryText" (click)="click(3)">
                 <count [count]="nPcl" *ngIf="nPcl  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
@@ -62,7 +62,7 @@
     <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
+                      id="llcInquiryText" (click)="click(4)">
                 <count [count]="nIlt" *ngIf="nIlt  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_text_msg.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
