--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -68,7 +68,7 @@
                             </mat-form-field>
                         </div>
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">       
-                            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <!--<mat-label>Select Marital Status</mat-label>-->
                                 <mat-label class="customMatLabel">Select Marital Status</mat-label>
                                 <mat-select formControlName="MaritalStatus" (selectionChange)="GenderChange($event)">
