--- a/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
+++ b/src/app/modules/dashboard/mco-dashborad/mco-dashborad.component.html
@@ -1,10 +1,10 @@
-<div class=" pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div class=" pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 bg-card dark:bg-transparent">
     <div class="heading">MCO Dashboard</div>
     <!-- Header -->
     <!-- Main -->
   
       <!-- Products list -->
-      <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
+      <div class="flex flex-auto" style="flex-direction: column;">
       <div class="row">
           <div  class="col-lg-4">
             <p class="text-green px-2 py-2 font-bold mb-0 mt-2">Performance Indicators</p>
