--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -35,20 +35,10 @@
                     <div class="kt-form">
                         <div class="kt-portlet__body">
                             <div class="kt-portlet__body-progress"></div>
-                            <kt-alert
-                                *ngIf="hasFormErrors"
-                                type="warn"
-                                [duration]="30000"
-                                [showCloseButton]="true"
-                                (close)="onAlertClose($event)"
-                            >
-                                Please enter valid Input
-                            </kt-alert>
-
 
                             <div class="collapse show" id="collapseExample">
 
-                                <div class="flex" style="flex-wrap: wrap;">
+                                <div class="row px-2" *ngIf="SearchType != 1">
                                     <app-zone-branch-circle
                                         [form]="RecoveryForm"
                                         [should_show_circle]="false"
@@ -83,9 +73,20 @@
                                             </button>
                                         </div>
                                     </div>
+
+                                </div>
+
+                                <div class="flex" style="flex-wrap: wrap;">
+
                                     <div class="row px-2" *ngIf="SearchType == 1">
                                         <div class="col-lg-12">
                                             <div class="form-group kt-form__group row">
+                                                <app-zone-branch-circle
+                                                    [form]="RecoveryForm"
+                                                    [should_show_circle]="false"
+                                                    (branchZoneCircleData)="getAllData($event)"
+                                                ></app-zone-branch-circle>
+
                                                 <div
                                                     class=" col-lg-3 kt-margin-bottom-20-mobile "
                                                 >
@@ -380,7 +381,7 @@
                     <td>
                         {{ transaction.StatusName }}
                     </td>
-                    <td class="pl-0"> 
+                    <td class="pl-0">
                         <div class="flex" style="flex-wrap: wrap; width: max-content;">
                         <button
                             *ngIf="
