--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -135,24 +135,27 @@
 
             <ng-container matColumnDef="Delete">
                 <mat-header-cell class="place-content-center text" *matHeaderCellDef>Action</mat-header-cell>
-                <mat-cell class="place-content-center" style="flex-wrap: wrap;" *matCellDef="let VillageBenchMark">
-                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkEditStatus(VillageBenchMark)"
-                            color="primary" (click)="editVillageBenchMark(VillageBenchMark)">
-                        <mat-icon title="edit benchmarking">edit</mat-icon>
-                    </button>
-                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkViewStatus(VillageBenchMark)"
-                            color="primary" (click)="viewVillageBenchMark(VillageBenchMark)">
-                        <mat-icon title="edit benchmarking">visibility</mat-icon>
-                    </button>
-                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkDeleteStatus(VillageBenchMark)"
-                            color="primary" (click)="deleteVillageBenchMark(VillageBenchMark)">
-                        <mat-icon title="Delete benchmarking">delete</mat-icon>
-                    </button>
+                <mat-cell *matCellDef="let VillageBenchMark">
+                    <div style="flex-wrap: wrap; width: max-content; display: contents;">
+                        <button  mat-icon-button *ngIf="checkEditStatus(VillageBenchMark)"
+                        color="primary" (click)="editVillageBenchMark(VillageBenchMark)">
+                             <mat-icon title="edit benchmarking">edit</mat-icon>
+                        </button>
+                        <button  mat-icon-button *ngIf="checkViewStatus(VillageBenchMark)"
+                                color="primary" (click)="viewVillageBenchMark(VillageBenchMark)">
+                            <mat-icon title="edit benchmarking">visibility</mat-icon>
+                        </button>
+                        <button  mat-icon-button *ngIf="checkDeleteStatus(VillageBenchMark)"
+                                color="primary" (click)="deleteVillageBenchMark(VillageBenchMark)">
+                            <mat-icon title="Delete benchmarking">delete</mat-icon>
+                        </button>
 
-                    <button style="margin-left: 5px" mat-icon-button *ngIf="checkMap(VillageBenchMark)" color="primary"
-                            (click)="viewMap(VillageBenchMark)">
-                        <mat-icon title="view benchmarking">location_on</mat-icon>
-                    </button>
+                        <button  mat-icon-button *ngIf="checkMap(VillageBenchMark)" color="primary"
+                                (click)="viewMap(VillageBenchMark)">
+                            <mat-icon title="view benchmarking">location_on</mat-icon>
+                        </button>
+                    </div>
+
 
                 </mat-cell>
 
