--- a/src/app/modules/loan/search-charge-creation-loan/search-charge-creation-loan.component.html
+++ b/src/app/modules/loan/search-charge-creation-loan/search-charge-creation-loan.component.html
@@ -5,7 +5,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">List of Application</div>
+            <div class="heading">Charge Creation Loan</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
