--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -45,7 +45,7 @@
         <div class="table-responsive">
             <table class="table table-striped">
 
-                <thead>
+                <thead  *ngIf="assignedtargetheading">
                 <tr class="table-header-background">
                     <th></th>
                     <th *ngFor="let len of totalLength">Assigned Target</th>
