--- a/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
+++ b/src/app/modules/loan/referback-loan-from-CAD/referback-loan-from-CAD.component.html
@@ -1,25 +1,29 @@
 <div
-    class="px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    class="px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
-    <div class="row">
+    <!-- Header -->
+
+    <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Loan List</div>
+            <div class="heading">Reffer Back Loan From CAD</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
                 <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
-                        color="primary"
-                        aria-expanded="false" aria-controls="collapseExample" onclick="toggleCollapse()">
-                    <mat-icon class="mr-2" id='arrow'>keyboard_arrow_down</mat-icon>
+                        color="primary" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">
+                    <mat-icon class="mr-2 up">keyboard_arrow_up</mat-icon>
+                    <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
             </p>
         </div>
     </div>
 
+
     <div class="collapse show" id="collapseExample">
         <div class="card card-body" [formGroup]="loanSearch">
-            <div class="flex mt-1" style="flex-wrap: wrap;">
+            <div class="flex" style="flex-wrap: wrap;">
                 <app-zone-branch-circle [form]="loanSearch" [should_show_circle]="false"
                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                 <div class="mx-2">
@@ -45,7 +49,7 @@
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
                             <mat-label>Status</mat-label>
-                            <mat-select formControlName="Status">
+                            <mat-select disabled formControlName="Status">
                                 <mat-option>
                                     <ngx-mat-select-search placeholderLabel="Search Loan Status..."
                                                            (focusout)="validateLoanStatusOnFocusOut()"
@@ -83,22 +87,17 @@
 
         </div>
     </div>
-
-    <!-- Header -->
     <div>
 
-
         <!-- Main -->
-        <div class="flex flex-auto overflow-y-scroll">
+        <div class="flex flex-auto shadow-xs rounded-sm bg-gray-50 overflow-y-scroll">
 
             <!-- Products list -->
             <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
-                <div
-                    class="flex flex-col flex-auto sm:mb-2 overflow-scroll sm:overflow-y-auto border shadow-xs rounded-sm bg-gray-50"
-                    [style.height]="gridHeight">
-                    <mat-table class="lmat-elevation-z8 "
+                <div class="flex flex-col flex-auto sm:mb-18 overflow-scroll sm:overflow-y-auto">
+                    <mat-table class="lmat-elevation-z8"
                                #table
-                               [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
+                               [dataSource]="dataSource"
                                matSort
                                #sort1="matSort"
                                matSortActive="id"
@@ -150,16 +149,13 @@
                         <ng-container matColumnDef="Action">
                             <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
                             <mat-cell *matCellDef="let loan">
-<!--                                <button mat-icon-button color="primary" (click)="editLoan(loan)"-->
-<!--                                        *ngIf="CheckEditStatus(loan)">-->
-<!--                                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>-->
-<!--                                </button>-->
+                                <button mat-icon-button color="primary" (click)="editLoan(loan)"
+                                        *ngIf="CheckEditStatus(loan)">
+                                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
+                                </button>
                                 <button mat-icon-button color="primary" (click)="editLoan(loan)"
                                         *ngIf="!CheckEditStatus(loan)">
                                     <mat-icon style="margin-left: 5px;" title="View Loan">edit</mat-icon>
-                                </button>
-                                <button mat-icon-button color="primary" (click)="ViewOrr(loan)">
-                                    <mat-icon style="margin-left: 5px;" title="View Loan">visibility</mat-icon>
                                 </button>
                             </mat-cell>
                         </ng-container>
@@ -169,28 +165,8 @@
 
                         <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
                     </mat-table>
-
+                    <div class="mat-table__message" *ngIf="dataSource.data.length==0">No records found</div>
                 </div>
-                <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
-                    <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-                    Items per page:
-                    <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
-                                style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-                        <mat-option [value]="5">5</mat-option>
-                        <mat-option [value]="10">10</mat-option>
-                        <mat-option [value]="25">25</mat-option>
-                        <mat-option [value]="50">50</mat-option>
-                    </mat-select>
-                    <button (click)="paginate(1)">First</button>
-                    <pagination-controls display="inline" (pageChange)="paginate($event)"
-                                         style="display: inline-block;"></pagination-controls>
-                    <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-                    <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
-
-                </div>
-
-                <!--        <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>-->
-                <!--        <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
 
             </div>
 
@@ -199,4 +175,6 @@
     </div>
 
 
-</div>
+
+
+
