--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -38,47 +38,9 @@
 
                             <div class="collapse show" id="collapseExample">
 
-                                <div class="row px-2" *ngIf="SearchType != 1">
-                                    <app-zone-branch-circle
-                                        [form]="RecoveryForm"
-                                        [should_show_circle]="false"
-                                        (branchZoneCircleData)="getAllData($event)"
-                                    ></app-zone-branch-circle>
-                                    <div class="mx-2">
-                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                                <mat-label class="customMatLabel">Working Date (ddMMyyyy) <strong
-                                                    class="matMandatory">*</strong>
-                                                </mat-label>
-                                                <input matInput [matDatepicker]="picker2" formControlName="WorkingDate"
-                                                       maxlength="30"
-                                                       autocomplete="off" (dateChange)="isEnableWorkingDate()"
-                                                       appNumberOnly [disabled]="disableWorkingDate"/>
-                                                <mat-datepicker-toggle matSuffix
-                                                                       [for]="picker2"></mat-datepicker-toggle>
-                                                <mat-datepicker #picker2></mat-datepicker>
-                                            </mat-form-field>
-                                        </div>
-                                    </div>
-                                    <div class="mx-2">
-                                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-
-                                            <button
-                                                class=" mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary bg-gray-500"
-                                                mat-raised-button
-                                                type="button"
-                                                (click)="find()">
-                                                <mat-icon class="mr-2">search</mat-icon>
-                                                Search
-                                            </button>
-                                        </div>
-                                    </div>
-
-                                </div>
-
                                 <div class="flex" style="flex-wrap: wrap;">
-
-                                    <div class="row px-2" *ngIf="SearchType == 1">
+<!--                                    <div class="row px-2" *ngIf="SearchType == 1">-->
+                                    <div class="row px-2">
                                         <div class="col-lg-12">
                                             <div class="form-group kt-form__group row">
                                                 <app-zone-branch-circle
@@ -86,6 +48,23 @@
                                                     [should_show_circle]="false"
                                                     (branchZoneCircleData)="getAllData($event)"
                                                 ></app-zone-branch-circle>
+
+                                                <div
+                                                    class=" col-lg-3 kt-margin-bottom-20-mobile "
+                                                >
+                                                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                        <mat-label class="customMatLabel">Working Date (ddMMyyyy) <strong
+                                                            class="matMandatory">*</strong>
+                                                        </mat-label>
+                                                        <input matInput [matDatepicker]="picker" formControlName="WorkingDate"
+                                                               maxlength="30"
+                                                               autocomplete="off" (dateChange)="isEnableWorkingDate()"
+                                                               appNumberOnly [disabled]="disableWorkingDate"/>
+                                                        <mat-datepicker-toggle matSuffix
+                                                                               [for]="picker"></mat-datepicker-toggle>
+                                                        <mat-datepicker #picker></mat-datepicker>
+                                                    </mat-form-field>
+                                                </div>
 
                                                 <div
                                                     class=" col-lg-3 kt-margin-bottom-20-mobile "
