--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.scss
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.scss
@@ -36,3 +36,9 @@ table > tbody > tr > td > span {
 .mr-1p {
     margin-right: 1% !important;
 }
+
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    background-color: white;
+    border-radius: 5px;
+  }
