--- a/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
+++ b/src/app/modules/loan-recovery/search-recovery-common/search-recovery-common.component.html
@@ -40,19 +40,14 @@
 
                                 <div class="flex" style="flex-wrap: wrap;">
 <!--                                    <div class="row px-2" *ngIf="SearchType == 1">-->
-                                    <div class="row px-2">
-                                        <div class="col-lg-12">
-                                            <div class="form-group kt-form__group row">
+                                            <div class="flex" style="flex-wrap: wrap;">
                                                 <app-zone-branch-circle
                                                     [form]="RecoveryForm"
                                                     [should_show_circle]="false"
-                                                    (branchZoneCircleData)="getAllData($event)"
-                                                ></app-zone-branch-circle>
+                                                    (branchZoneCircleData)="getAllData($event)" ></app-zone-branch-circle>
 
-                                                <div
-                                                    class=" col-lg-3 kt-margin-bottom-20-mobile "
-                                                >
-                                                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 " style="width: 225px;">
+                                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                                         <mat-label class="customMatLabel">Working Date (ddMMyyyy) <strong
                                                             class="matMandatory">*</strong>
                                                         </mat-label>
@@ -66,9 +61,8 @@
                                                     </mat-form-field>
                                                 </div>
 
-                                                <div
-                                                    class=" col-lg-3 kt-margin-bottom-20-mobile "
-                                                >
+                                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 " style="width: 225px;">
+
                                                     <mat-form-field
                                                         class="mat-form-field-fluid w-full"
                                                         appearance="outline"
@@ -110,12 +104,8 @@
                                                         >
                                                     </mat-form-field>
                                                 </div>
-                                                <div
-                                                    class="
-                                            col-lg-3
-                                            kt-margin-bottom-20-mobile
-                                        "
-                                                >
+                                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 " style="width: 225px;">
+
                                                     <mat-form-field
                                                         class="mat-form-field-fluid w-full"
                                                         appearance="outline"
@@ -149,12 +139,8 @@
                                                     </mat-form-field>
                                                 </div>
 
-                                                <div
-                                                    class="
-                                            col-lg-3
-                                            kt-margin-bottom-20-mobile
-                                        "
-                                                >
+                                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 " style="width: 225px;">
+
                                                     <mat-form-field
                                                         class="mat-form-field-fluid w-full"
                                                         appearance="outline"
@@ -187,12 +173,8 @@
                                                         >
                                                     </mat-form-field>
                                                 </div>
-                                                <div
-                                                    class="
-                                            col-lg-3
-                                            kt-margin-bottom-20-mobile
-                                        "
-                                                >
+                                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 " style="width: 225px;">
+
                                                     <mat-form-field
                                                         class="mat-form-field-fluid w-full"
                                                         appearance="outline"
@@ -224,12 +206,8 @@
                                                     </mat-form-field>
                                                 </div>
 
-                                                <div
-                                                    class="
-                                            col-lg-3
-                                            kt-margin-bottom-20-mobile
-                                        "
-                                                >
+                                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 " style="width: 225px;">
+
                                                     <mat-form-field
                                                         class="mat-form-field-fluid w-full"
                                                         appearance="outline"
@@ -250,7 +228,8 @@
                                                         </mat-select>
                                                     </mat-form-field>
                                                 </div>
-                                                <div class="col-lg-2 mt-2">
+                                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2 " style="width: 225px;">
+
                                                     <button
                                                         class="
                                                 mat-focus-indicator
@@ -271,8 +250,7 @@
                                                     </button>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
+
 
                                 </div>
                             </div>
