--- a/src/app/modules/reports/disbursement-performance-report/disbursement-performance-report.component.html
+++ b/src/app/modules/reports/disbursement-performance-report/disbursement-performance-report.component.html
@@ -5,7 +5,7 @@
             <div class="kt-portlet__head-label flex w-full">
                 <h3 class="heading w-11/12">Disbursement Performance Report</h3>
                 <button class="text-end w-1/12" (click)="close(0)">
-                    <mat-icon class="ml-2 text-white  p-3   bg-danger rounded-md">close</mat-icon>
+                    <mat-icon class="ml-2 text-red-500  p-3  rounded-md">cancel</mat-icon>
                 </button>
             </div>
             <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
