--- a/src/app/modules/journal-voucher/search-jv-rb/search-jv-rb.component.html
+++ b/src/app/modules/journal-voucher/search-jv-rb/search-jv-rb.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading"> Referred Back Transaction(J.V)</div>
+            <div class="heading"> Referred Back Transaction</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
