--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -72,7 +72,7 @@
                                 <mat-form-field class="mat-form-field-fluid" appearance="outline">
                                     <mat-label class="customMatLabel"> {{item.ItemName}} <strong
                                         class="matMandatory">* </strong></mat-label>
-                                    <input matInput maxlength="8" type="number"  placeholder="Enter '+ {{item.ItemName}} + '"
+                                    <input matInput (keypress)="numberOnly($event)" maxlength="8" type="text"  placeholder="Enter '+ {{item.ItemName}} + '"
                                            id="{{item.ID}}" value="{{item.Value}}" (keydown)="onIncomeChange($event)" (keyup)="onIncomeChange($event)"
                                            autocomplete="off"/>
                                 </mat-form-field>
@@ -101,7 +101,7 @@
                             <mat-form-field class="mat-form-field-fluid" appearance="outline">
                                 <mat-label class="customMatLabel"> {{liab.ItemName}} <strong
                                     class="matMandatory">* </strong></mat-label>
-                                <input matInput maxlength="8" type="number"  placeholder="Enter '+ {{liab.ItemName}} + '"
+                                <input matInput  (keypress)="numberOnly($event)" maxlength="8" type="text"  placeholder="Enter '+ {{liab.ItemName}} + '"
                                        id="{{liab.ID}}" value="{{liab.Value}}"  (keydown)="onLiabChange($event)" (keyup)="onLiabChange($event)"
                                        autocomplete="off"/>
                             </mat-form-field>
