--- a/src/app/modules/customer/submit-documents/submit-documents.component.html
+++ b/src/app/modules/customer/submit-documents/submit-documents.component.html
@@ -27,25 +27,29 @@
 
 
     <div *ngFor="let j of [].constructor(number_of_files);let i=index">
-        <div class="row">
-            <div class="col-lg-3">
+        <div class="row p-2 border rounded my-2">
+            <div class="col-lg-3 align-self-center">
                 <input type="file" accept="image/png, image/jpg, image/jpeg" appearance="outline"
                        (change)="onFileChange($event, i)"/>
+                <div class="shadow-sm mt-2"  style="width: 240px; position: relative;">
+                    <img [src]="doc_urls[i]" (click)="previewImg(doc_urls[i])">
+                </div>
+
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3  align-self-center">
 
                 <mat-form-field appearance="outline">
                     <mat-label>Description</mat-label>
                     <input matInput type="text" id="description_{{i}}"/>
                 </mat-form-field>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 align-self-center">
                 <mat-form-field appearance="outline">
                     <mat-label>Reference No.</mat-label>
                     <input matInput type="text" id="reference_{{i}}"/>
                 </mat-form-field>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 align-self-center">
                 <mat-form-field appearance="outline">
                     <mat-label class="customMatLabel">Select Document Type
                     </mat-label>
@@ -61,5 +65,5 @@
 
     </div>
 
-    <button mat-flat-button class="bg-green" (click)="submitDocuments()">Submit</button>
+    <button mat-flat-button class="bg-green mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="submitDocuments()">Submit</button>
 </div>
